--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Interactive card details form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="./src/static/css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     .attribution {
       font-size: 11px;
@@ -25,17 +27,44 @@
 
 <body>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
+  <header>
+    <div class="card_front">
+      <img src="./src/static/images/card-logo.svg" alt="logo" class="card_logo">
+      <p class="card_number">0000 0000 0000 0000</p>
+      <div class="card_front-footer">
+        <span class="card_name">Jane Appleseed</span>
+        <span class="card_exp">00/00</span>
+      </div>
+    </div>
+    <div class="card_back">
+      <div class="magnetic_stripe"></div>
+      <div class="cvc_code">
+        <span class="csv_code-number">000</span>
+      </div>
 
-  000
+    </div>
+  </header>
+  <main>
+    <section class="form_card">
+      <form>
+        <div class="form-group">
+          <label for="Cardname" class="form-label">cardholder name</label>
+          <input type="text" class="form-control" id="Cardname" placeholder="e.g. Jane Appleseed">
+        </div>
+        <div class="form-group">
+          <label for="Cardnumber" class="form-label">card number</label>
+          <input type="text" class="form-control" id="Cardnumber" placeholder="e.g.1234 5678 9123 0000">
+        </div>
+      </form>
+    </section>
 
-  Cardholder Name
-  e.g. Jane Appleseed
+  </main>
 
-  Card Number
-  e.g. 1234 5678 9123 0000
+
+
+
+
+
 
   Exp. Date (MM/YY)
   MM
@@ -54,7 +83,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Manuel Takata</a>.
   </div>
   <script src="./src/js/main.js"></script>
 </body>
